# g-kway

./: CMakeLists.txt  declarations.h  kway
gkway/: CMakeLists.txt  graph.cpp  graph.hpp  kernel.hpp
main/: CMakeLists.txt  main.cu
testcases/: small.graph  small_weighted.graph
