#add_executable(g-kway main.cu)

# options/flags pass to the compiler
#target_compile_features( INTERFACE cxx_std_17)
#target_compile_options(qsat INTERFACE -Wall -Wextra -Wfatal-errors)

# include and libary linking
#target_include_directories(gkway PRIVATE ${PROJECT_SOURCE_DIR})
#target_link_libraries(g-kway LINK_PUBLIC gkway)


